# serializer version: 1
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_audio_configuration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'dual_mono',
        'mono',
        'stereo_only',
        'stereo_surr_mono',
        'stereo_surr_lr',
        'stereo_surr_lr_back_mono',
        'stereo_surr_lr_back_lr',
        'stereo_surr_lr_back_matrix',
        'stereo_center',
        'stereo_center_surr_mono',
        'stereo_center_surr_lr',
        'stereo_center_surr_lr_back_mono',
        'stereo_center_surr_lr_back_lr',
        'stereo_center_surr_lr_back_matrix',
        'stereo_downmix',
        'stereo_only_lo_ro',
        'dual_mono_lfe',
        'mono_lfe',
        'stereo_lfe',
        'stereo_surr_mono_lfe',
        'stereo_surr_lr_lfe',
        'stereo_surr_lr_back_mono_lfe',
        'stereo_surr_lr_back_lr_lfe',
        'stereo_surr_lr_back_matrix_lfe',
        'stereo_center_lfe',
        'stereo_center_surr_mono_lfe',
        'stereo_center_surr_lr_lfe',
        'stereo_center_surr_lr_back_mono_lfe',
        'stereo_center_surr_lr_back_lr_lfe',
        'stereo_center_surr_lr_back_matrix_lfe',
        'stereo_downmix_lfe',
        'stereo_only_lo_ro_lfe',
        'unknown',
        'undetected',
        'auro_quad',
        'auro_5_0',
        'auro_5_1',
        'auro_2_2_2',
        'auro_8_0',
        'auro_9_1',
        'auro_10_1',
        'auro_11_1',
        'auro_13_1',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_audio_configuration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming audio configuration',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Incoming audio configuration',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_audio_config',
    'unique_id': '456789abcdef-1-incoming_audio_config',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_audio_configuration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Arcam FMJ (127.0.0.1) Incoming audio configuration',
      'options': list([
        'dual_mono',
        'mono',
        'stereo_only',
        'stereo_surr_mono',
        'stereo_surr_lr',
        'stereo_surr_lr_back_mono',
        'stereo_surr_lr_back_lr',
        'stereo_surr_lr_back_matrix',
        'stereo_center',
        'stereo_center_surr_mono',
        'stereo_center_surr_lr',
        'stereo_center_surr_lr_back_mono',
        'stereo_center_surr_lr_back_lr',
        'stereo_center_surr_lr_back_matrix',
        'stereo_downmix',
        'stereo_only_lo_ro',
        'dual_mono_lfe',
        'mono_lfe',
        'stereo_lfe',
        'stereo_surr_mono_lfe',
        'stereo_surr_lr_lfe',
        'stereo_surr_lr_back_mono_lfe',
        'stereo_surr_lr_back_lr_lfe',
        'stereo_surr_lr_back_matrix_lfe',
        'stereo_center_lfe',
        'stereo_center_surr_mono_lfe',
        'stereo_center_surr_lr_lfe',
        'stereo_center_surr_lr_back_mono_lfe',
        'stereo_center_surr_lr_back_lr_lfe',
        'stereo_center_surr_lr_back_matrix_lfe',
        'stereo_downmix_lfe',
        'stereo_only_lo_ro_lfe',
        'unknown',
        'undetected',
        'auro_quad',
        'auro_5_0',
        'auro_5_1',
        'auro_2_2_2',
        'auro_8_0',
        'auro_9_1',
        'auro_10_1',
        'auro_11_1',
        'auro_13_1',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_audio_configuration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_audio_format-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'pcm',
        'analogue_direct',
        'dolby_digital',
        'dolby_digital_ex',
        'dolby_digital_surround',
        'dolby_digital_plus',
        'dolby_digital_true_hd',
        'dts',
        'dts_96_24',
        'dts_es_matrix',
        'dts_es_discrete',
        'dts_es_matrix_96_24',
        'dts_es_discrete_96_24',
        'dts_hd_master_audio',
        'dts_hd_high_res_audio',
        'dts_low_bit_rate',
        'dts_core',
        'pcm_zero',
        'unsupported',
        'undetected',
        'dolby_atmos',
        'dts_x',
        'imax_enhanced',
        'auro_3d',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_audio_format',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming audio format',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Incoming audio format',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_audio_format',
    'unique_id': '456789abcdef-1-incoming_audio_format',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_audio_format-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Arcam FMJ (127.0.0.1) Incoming audio format',
      'options': list([
        'pcm',
        'analogue_direct',
        'dolby_digital',
        'dolby_digital_ex',
        'dolby_digital_surround',
        'dolby_digital_plus',
        'dolby_digital_true_hd',
        'dts',
        'dts_96_24',
        'dts_es_matrix',
        'dts_es_discrete',
        'dts_es_matrix_96_24',
        'dts_es_discrete_96_24',
        'dts_hd_master_audio',
        'dts_hd_high_res_audio',
        'dts_low_bit_rate',
        'dts_core',
        'pcm_zero',
        'unsupported',
        'undetected',
        'dolby_atmos',
        'dts_x',
        'imax_enhanced',
        'auro_3d',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_audio_format',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_audio_sample_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_audio_sample_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming audio sample rate',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.FREQUENCY: 'frequency'>,
    'original_icon': None,
    'original_name': 'Incoming audio sample rate',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_audio_sample_rate',
    'unique_id': '456789abcdef-1-incoming_audio_sample_rate',
    'unit_of_measurement': <UnitOfFrequency.HERTZ: 'Hz'>,
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_audio_sample_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'frequency',
      'friendly_name': 'Arcam FMJ (127.0.0.1) Incoming audio sample rate',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfFrequency.HERTZ: 'Hz'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_audio_sample_rate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_video_aspect_ratio-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'undefined',
        'aspect_4_3',
        'aspect_16_9',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_video_aspect_ratio',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming video aspect ratio',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Incoming video aspect ratio',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_video_aspect_ratio',
    'unique_id': '456789abcdef-1-incoming_video_aspect_ratio',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_video_aspect_ratio-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Arcam FMJ (127.0.0.1) Incoming video aspect ratio',
      'options': list([
        'undefined',
        'aspect_4_3',
        'aspect_16_9',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_video_aspect_ratio',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_video_colorspace-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'normal',
        'hdr10',
        'dolby_vision',
        'hlg',
        'hdr10_plus',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_video_colorspace',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming video colorspace',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Incoming video colorspace',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_video_colorspace',
    'unique_id': '456789abcdef-1-incoming_video_colorspace',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_video_colorspace-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Arcam FMJ (127.0.0.1) Incoming video colorspace',
      'options': list([
        'normal',
        'hdr10',
        'dolby_vision',
        'hlg',
        'hdr10_plus',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_video_colorspace',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_video_horizontal_resolution-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_video_horizontal_resolution',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming video horizontal resolution',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Incoming video horizontal resolution',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_video_horizontal_resolution',
    'unique_id': '456789abcdef-1-incoming_video_horizontal_resolution',
    'unit_of_measurement': 'px',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_video_horizontal_resolution-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Incoming video horizontal resolution',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'px',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_video_horizontal_resolution',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_video_refresh_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_video_refresh_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming video refresh rate',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.FREQUENCY: 'frequency'>,
    'original_icon': None,
    'original_name': 'Incoming video refresh rate',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_video_refresh_rate',
    'unique_id': '456789abcdef-1-incoming_video_refresh_rate',
    'unit_of_measurement': <UnitOfFrequency.HERTZ: 'Hz'>,
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_video_refresh_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'frequency',
      'friendly_name': 'Arcam FMJ (127.0.0.1) Incoming video refresh rate',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfFrequency.HERTZ: 'Hz'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_video_refresh_rate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_video_vertical_resolution-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_video_vertical_resolution',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming video vertical resolution',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Incoming video vertical resolution',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_video_vertical_resolution',
    'unique_id': '456789abcdef-1-incoming_video_vertical_resolution',
    'unit_of_measurement': 'px',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_incoming_video_vertical_resolution-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Incoming video vertical resolution',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'px',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_incoming_video_vertical_resolution',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_audio_configuration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'dual_mono',
        'mono',
        'stereo_only',
        'stereo_surr_mono',
        'stereo_surr_lr',
        'stereo_surr_lr_back_mono',
        'stereo_surr_lr_back_lr',
        'stereo_surr_lr_back_matrix',
        'stereo_center',
        'stereo_center_surr_mono',
        'stereo_center_surr_lr',
        'stereo_center_surr_lr_back_mono',
        'stereo_center_surr_lr_back_lr',
        'stereo_center_surr_lr_back_matrix',
        'stereo_downmix',
        'stereo_only_lo_ro',
        'dual_mono_lfe',
        'mono_lfe',
        'stereo_lfe',
        'stereo_surr_mono_lfe',
        'stereo_surr_lr_lfe',
        'stereo_surr_lr_back_mono_lfe',
        'stereo_surr_lr_back_lr_lfe',
        'stereo_surr_lr_back_matrix_lfe',
        'stereo_center_lfe',
        'stereo_center_surr_mono_lfe',
        'stereo_center_surr_lr_lfe',
        'stereo_center_surr_lr_back_mono_lfe',
        'stereo_center_surr_lr_back_lr_lfe',
        'stereo_center_surr_lr_back_matrix_lfe',
        'stereo_downmix_lfe',
        'stereo_only_lo_ro_lfe',
        'unknown',
        'undetected',
        'auro_quad',
        'auro_5_0',
        'auro_5_1',
        'auro_2_2_2',
        'auro_8_0',
        'auro_9_1',
        'auro_10_1',
        'auro_11_1',
        'auro_13_1',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_audio_configuration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming audio configuration',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Incoming audio configuration',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_audio_config',
    'unique_id': '456789abcdef-2-incoming_audio_config',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_audio_configuration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Arcam FMJ (127.0.0.1) Zone 2 Incoming audio configuration',
      'options': list([
        'dual_mono',
        'mono',
        'stereo_only',
        'stereo_surr_mono',
        'stereo_surr_lr',
        'stereo_surr_lr_back_mono',
        'stereo_surr_lr_back_lr',
        'stereo_surr_lr_back_matrix',
        'stereo_center',
        'stereo_center_surr_mono',
        'stereo_center_surr_lr',
        'stereo_center_surr_lr_back_mono',
        'stereo_center_surr_lr_back_lr',
        'stereo_center_surr_lr_back_matrix',
        'stereo_downmix',
        'stereo_only_lo_ro',
        'dual_mono_lfe',
        'mono_lfe',
        'stereo_lfe',
        'stereo_surr_mono_lfe',
        'stereo_surr_lr_lfe',
        'stereo_surr_lr_back_mono_lfe',
        'stereo_surr_lr_back_lr_lfe',
        'stereo_surr_lr_back_matrix_lfe',
        'stereo_center_lfe',
        'stereo_center_surr_mono_lfe',
        'stereo_center_surr_lr_lfe',
        'stereo_center_surr_lr_back_mono_lfe',
        'stereo_center_surr_lr_back_lr_lfe',
        'stereo_center_surr_lr_back_matrix_lfe',
        'stereo_downmix_lfe',
        'stereo_only_lo_ro_lfe',
        'unknown',
        'undetected',
        'auro_quad',
        'auro_5_0',
        'auro_5_1',
        'auro_2_2_2',
        'auro_8_0',
        'auro_9_1',
        'auro_10_1',
        'auro_11_1',
        'auro_13_1',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_audio_configuration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_audio_format-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'pcm',
        'analogue_direct',
        'dolby_digital',
        'dolby_digital_ex',
        'dolby_digital_surround',
        'dolby_digital_plus',
        'dolby_digital_true_hd',
        'dts',
        'dts_96_24',
        'dts_es_matrix',
        'dts_es_discrete',
        'dts_es_matrix_96_24',
        'dts_es_discrete_96_24',
        'dts_hd_master_audio',
        'dts_hd_high_res_audio',
        'dts_low_bit_rate',
        'dts_core',
        'pcm_zero',
        'unsupported',
        'undetected',
        'dolby_atmos',
        'dts_x',
        'imax_enhanced',
        'auro_3d',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_audio_format',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming audio format',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Incoming audio format',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_audio_format',
    'unique_id': '456789abcdef-2-incoming_audio_format',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_audio_format-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Arcam FMJ (127.0.0.1) Zone 2 Incoming audio format',
      'options': list([
        'pcm',
        'analogue_direct',
        'dolby_digital',
        'dolby_digital_ex',
        'dolby_digital_surround',
        'dolby_digital_plus',
        'dolby_digital_true_hd',
        'dts',
        'dts_96_24',
        'dts_es_matrix',
        'dts_es_discrete',
        'dts_es_matrix_96_24',
        'dts_es_discrete_96_24',
        'dts_hd_master_audio',
        'dts_hd_high_res_audio',
        'dts_low_bit_rate',
        'dts_core',
        'pcm_zero',
        'unsupported',
        'undetected',
        'dolby_atmos',
        'dts_x',
        'imax_enhanced',
        'auro_3d',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_audio_format',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_audio_sample_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_audio_sample_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming audio sample rate',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.FREQUENCY: 'frequency'>,
    'original_icon': None,
    'original_name': 'Incoming audio sample rate',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_audio_sample_rate',
    'unique_id': '456789abcdef-2-incoming_audio_sample_rate',
    'unit_of_measurement': <UnitOfFrequency.HERTZ: 'Hz'>,
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_audio_sample_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'frequency',
      'friendly_name': 'Arcam FMJ (127.0.0.1) Zone 2 Incoming audio sample rate',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfFrequency.HERTZ: 'Hz'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_audio_sample_rate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_aspect_ratio-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'undefined',
        'aspect_4_3',
        'aspect_16_9',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_aspect_ratio',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming video aspect ratio',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Incoming video aspect ratio',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_video_aspect_ratio',
    'unique_id': '456789abcdef-2-incoming_video_aspect_ratio',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_aspect_ratio-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Arcam FMJ (127.0.0.1) Zone 2 Incoming video aspect ratio',
      'options': list([
        'undefined',
        'aspect_4_3',
        'aspect_16_9',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_aspect_ratio',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_colorspace-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'normal',
        'hdr10',
        'dolby_vision',
        'hlg',
        'hdr10_plus',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_colorspace',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming video colorspace',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Incoming video colorspace',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_video_colorspace',
    'unique_id': '456789abcdef-2-incoming_video_colorspace',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_colorspace-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Arcam FMJ (127.0.0.1) Zone 2 Incoming video colorspace',
      'options': list([
        'normal',
        'hdr10',
        'dolby_vision',
        'hlg',
        'hdr10_plus',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_colorspace',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_horizontal_resolution-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_horizontal_resolution',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming video horizontal resolution',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Incoming video horizontal resolution',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_video_horizontal_resolution',
    'unique_id': '456789abcdef-2-incoming_video_horizontal_resolution',
    'unit_of_measurement': 'px',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_horizontal_resolution-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Zone 2 Incoming video horizontal resolution',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'px',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_horizontal_resolution',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_refresh_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_refresh_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming video refresh rate',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.FREQUENCY: 'frequency'>,
    'original_icon': None,
    'original_name': 'Incoming video refresh rate',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_video_refresh_rate',
    'unique_id': '456789abcdef-2-incoming_video_refresh_rate',
    'unit_of_measurement': <UnitOfFrequency.HERTZ: 'Hz'>,
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_refresh_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'frequency',
      'friendly_name': 'Arcam FMJ (127.0.0.1) Zone 2 Incoming video refresh rate',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfFrequency.HERTZ: 'Hz'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_refresh_rate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_vertical_resolution-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_vertical_resolution',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Incoming video vertical resolution',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Incoming video vertical resolution',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'incoming_video_vertical_resolution',
    'unique_id': '456789abcdef-2-incoming_video_vertical_resolution',
    'unit_of_measurement': 'px',
  })
# ---
# name: test_setup[sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_vertical_resolution-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Zone 2 Incoming video vertical resolution',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'px',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.arcam_fmj_127_0_0_1_zone_2_incoming_video_vertical_resolution',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
